fixed formatting of stars vertical alignment

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
 
 .rate-container .fa-star {
   cursor: pointer;
+  vertical-align: middle;
 }
 
 .movie-item {
